# inteliplan_docker_anytree

./: .gitignore  download_pretrained_model.sh
docker/: .env  Dockerfile  docker-compose-gui.yml  docker-compose.yml
src/anymal_base_control/: CMakeLists.txt  package.xml
src/anymal_base_control/resources/: behavior_tree_navigate_to_goal.xml
src/anymal_base_control/src/: navigate_to_goal_anymal.txt  send_goal_node.cpp
src/anytree_locomanipulation/base_controller_interface/: CMakeLists.txt  package.xml  setup.py
src/anytree_locomanipulation/base_controller_interface/action/: BaseMove.action
src/anytree_locomanipulation/base_controller_interface/launch/: base_controller_interface.launch
src/anytree_locomanipulation/base_controller_interface/scripts/: base_controller_client.py  base_controller_node.py  base_controller_server.py  test.py
src/anytree_locomanipulation/base_controller_interface/src/base_controller_interface/: base_position_controller.py
src/anytree_locomanipulation/base_controller_interface/srv/: GoPose.srv
src/inteliplan_interface/: CMakeLists.txt  package.xml
src/inteliplan_interface/configs/: anytree_debug.rviz  drawer.world  table.world  table.yaml
src/inteliplan_interface/configs/models/apple/: model.config  model.sdf
src/inteliplan_interface/configs/models/drawer/: model.sdf
src/inteliplan_interface/configs/models/drawer/StorageFurniture_0/: model.urdf  model_hc.urdf
src/inteliplan_interface/configs/models/drawer/StorageFurniture_0/colour_objs/: original-14.mtl  original-17.mtl  original-30.mtl  original-49.mtl  original-60.mtl  original-63.mtl
src/inteliplan_interface/configs/models/drawer/StorageFurniture_0/high_contrast_objs/: high_contrast.mtl
src/inteliplan_interface/configs/models/sideboard/: model.config  model.sdf
src/inteliplan_interface/configs/models/table/: model.config  model.sdf
src/inteliplan_interface/configs/models/table/wood/scripts/: wood.material
src/inteliplan_interface/configs/models/virtual_camera/: model.sdf
src/inteliplan_interface/launch/: camera.launch  simulation.launch
src/inteliplan_interface/procman_configs/: start_simulation_control.pmd
src/inteliplan_interface/scripts/: action_execution.py  base_control.py  base_position_controller.py  feasibility_graph.py  feasibility_subscriber.py  main.py  run.tmux  speech_to_text.py  transformers_inference.py  vision_subscriber.py
src/inteliplan_interface/worlds/: table.yaml
src/position_controller/: CMakeLists.txt  README.md  package.xml
src/position_controller/cfg/: PositionController.cfg
src/position_controller/launch/: position_controller.launch
src/position_controller/signal_scope/: position_controller_signal_scope.py  repub_cmd.py
src/position_controller/src/lidar_sweep_collector/: lidar_sweep_collector_node.cpp  point_cloud_collector_node.cpp
src/position_controller/src/position_controller/: position_controller.cpp  position_controller_node.cpp  simple_heading_controller_node.cpp
