<?xml version="1.0"?>
<package format="2">
  <name>anymal_base_control</name>
  <version>0.0.1</version>
  <description>Navigation goal client</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>navigation_manager_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>navigation_manager_msgs</exec_depend>
</package>
