<?xml version="1.0"?>
<package format="2">
  <name>position_controller</name>
  <version>0.0.0</version>
  <description>The position_controller package</description>

  <maintainer email="a@todo.todo">a</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_conversions</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf_conversions</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>

  <export>
  </export>
</package>
