<?xml version="1.0"?>
<package format="2">
    <name>base_controller_interface</name>
    <version>0.0.1</version>
    <description>Interface node to call position_controller using a ROS service</description>

    <maintainer email="your.email@example.com">Your Name</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <build_depend>rospy</build_depend>
    <exec_depend>rospy</exec_depend>

    <build_depend>std_msgs</build_depend>
    <exec_depend>std_msgs</exec_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <build_depend>actionlib</build_depend>
    <exec_depend>actionlib</exec_depend>
    <build_depend>actionlib_msgs</build_depend>
    <exec_depend>actionlib_msgs</exec_depend>

    <depend>position_controller</depend>
    <export></export>
</package>
